# tiscamera

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeInstall.cmake  CMakeLists.txt  CMakeOptions.cmake  LICENSE  README.md  contributions.txt  dependencies-debian-compilation.txt  dependencies-debian-runtime.txt  dutils-test.py  version.cmake
data/: CMakeLists.txt  tcam.pc.cmake
data/bash-completion/: CMakeLists.txt  gige-daemon  tcam-capture  tcam-ctrl  tcam-gige-daemon
data/images/: CMakeLists.txt
data/systemd/: CMakeLists.txt  gige-daemon.service.cmake  tcam-gige-daemon.service.cmake
data/udev/: 80-theimagingsource-cameras.rules  80-theimagingsource-cameras.rules.in  CMakeLists.txt
data/uvc-extensions/: CMakeLists.txt  property_id_list.txt  tisEUVC.xml  usb2.json  usb23.json  usb3.json  usb3.xml  usb33.json  usb37.json
doc/: CMakeLists.txt  Doxyfile-ALL.cmake  Doxyfile-User.cmake  Doxyfile.cmake  DoxygenLayout.xml  camera-ip-conf.md  conf.py.in  design.md  doxygen-layout-user.xml  doxygen-user-order.dox  doxygen.config.in  firmware-update.md  footer.html  gige-daemon.md  gobject-introspection.md  gstreamer.md  header.html  installation.md  legacy.md  logging.md  notes.org  properties.md  release-cycle.org  tcam-capture.md  tools.md  tutorial.org  update-camera.md  upgrade_guide_1.0.md  versioning-and-releases.md  welcome.md
doc/pages/: advanced-topics.rst  api.rst  backends.rst  building.md  building.rst  camera-ip-conf.md  camera-ip-conf.rst  cameras.rst  configuration.rst  contact.md  contact.rst  dependencies.rst  documentation.md  documentation.rst  environment.rst  error-handling.rst  examples.md  examples.rst  external-gstreamer.rst  firmware-update.md  firmware-update.rst  flags.md  flags.rst  further-reading.md  further-reading.rst  gige-daemon.md  gige-daemon.rst  gobject-introspection.md  gobject-introspection.rst  gstreamer.md  gstreamer.rst  index.rst  installation.rst  internal.rst  licensing.md  licensing.rst  lifetimes.rst  logging.md  logging.rst  optimizations.md  (+40 more)
doc/sphinx-tabs/: CHANGELOG.md  README.md  jest.config.js  pylint.cfg  setup.py
doc/sphinx-tabs-v1.1.13/: .travis.yml  CHANGES.txt  MANIFEST.in  tox.ini
doc/tutorial/: contact.md  installation.md  libtcam.md  tutorial.md
examples/cpp/: CMakeLists.txt  README.md
examples/showcamera/: CMakeLists.txt  CameraList.cpp  CameraList.h  README.md  afu050.h  camerabase.cpp  camerabase.h  cgigecamera.cpp  cgigecamera.h  config.h.in  cpropertiesdialog.cpp  cpropertiesdialog.h  dfkafu050.cpp  dfkafu050.h  main.cpp  property.cpp  property.h  showcamera.cpp  showcamera.h  usbcamera.cpp  usbcamera.h  usbgeneric.cpp  usbgeneric.h
libs/: CMakeLists.txt
libs/gst-helper/: CMakeLists.txt
libs/tcam-property/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  tcam-property.pc.cmake
libs/tcamprop/: CMakeLists.txt  LICENSE  README.md
src/: AFU050Device.cpp  AFU050Device.h  Allocator.cpp  Allocator.h  AravisDevice.cpp  AravisDevice.h  BackendLoader.cpp  BackendLoader.h  BufferPool.cpp  BufferPool.h  CMakeLists.txt  CaptureDevice.cpp  CaptureDevice.h  CaptureDeviceImpl.cpp  CaptureDeviceImpl.h  CaptureInterface.cpp  CaptureInterface.h  Device.cpp  Device.h  DeviceIndex.cpp  DeviceIndex.h  DeviceInfo.cpp  DeviceInfo.h  DeviceInterface.cpp  DeviceInterface.h  Error.cpp  Error.h  FilterBase.h  FilterLoader.cpp  FilterLoader.h  FormatHandlerInterface.h  GigECapture.cpp  GigECapture.h  Grabber.cpp  Grabber.h  ImageBuffer.cpp  ImageBuffer.h  ImageSink.cpp  ImageSink.h  ImageSource.cpp  (+135 more)
src/algorithms/: AutoFocus.cpp  AutoFocus.h  CMakeLists.txt  RegionOfInterest.cpp  RegionOfInterest.h  auto_alg.cpp  auto_alg.h  auto_alg_params.h  auto_alg_pass_itf.cpp  auto_alg_pass_itf.h  auto_exposure.cpp  auto_exposure.h  auto_focus.cpp  auto_focus.h  auto_hdr_gain.h  auto_sample_image.cpp  auto_sample_image.h  auto_wb_software_applied_float.cpp  auto_wb_temperature_gen.cpp  auto_wb_temperature_gen.h  auto_wb_temperature_sensor_data.h  bayer.c  bayer.cpp  bayer.h  biteater.cpp  biteater.h  debayer.cpp  debayer.h  dutils_header.h  image_auto_alg.h  image_base_defines.h  image_fourcc.h  image_fourcc_func.h  image_helper_types.h  image_sampling.c  image_sampling.cpp  image_sampling.h  image_sampling_float.cpp  image_sampling_float.h  image_sampling_u8.cpp  (+31 more)
src/aravis/: AravisAllocator.cpp  AravisAllocator.h  AravisDevice.cpp  AravisDevice.h  AravisDeviceProperties.cpp  AravisDeviceScaling.cpp  AravisDeviceStream.cpp  AravisPropertyBackend.cpp  AravisPropertyBackend.h  CMakeLists.txt  aravis_api.cpp  aravis_api.h  aravis_property_impl.cpp  aravis_property_impl.h  aravis_utils.cpp  aravis_utils.h  genicam_property_mapping.h
src/filter/: AutoPassFilter.cpp  AutoPassFilter.h  BayerRgbFilter.cpp  BayerRgbFilter.h  CMakeLists.txt  Makefile
src/gobject/: CMakeLists.txt  Tcam-0.1.h  Tcam-1.0.h  glib_compat.h  tcam-gobject.cpp  tcam-gobject.h  tcamprop.c  tcamprop.h
src/gstreamer-0.10/: AutoFocus.h  CMakeLists.txt  Makefile.in  README.md  auto_focus.h  base.c  base.h  bayer.c  gsttis_auto_exposure.c  gsttis_autofocus.c  gsttis_autofocus.h  gsttiscolorize.c  gsttisvideobufferfilter.c  gsttiswhitebalance.c  gsttiswhitebalance.h
src/gstreamer-1.0/: AutoFocus.cpp  CMakeLists.txt  auto_focus.h  bayer.h  gst_helper.h  gstmetatcamstatistics.cpp  gstmetatcamstatistics.h  gsttcamautoexposure.c  gsttcamautoexposure.cpp  gsttcamautoexposure.h  gsttcamautofocus.c  gsttcamautofocus.cpp  gsttcamautofocus.h  gsttcambin.cpp  gsttcambin.h  gsttcambiteater.cpp  gsttcambiteater.h  gsttcamdevice.cpp  gsttcamdevice.h  gsttcamdeviceprovider.cpp  gsttcammainsrc.cpp  gsttcammainsrc.h  gsttcamsrc.c  gsttcamsrc.cpp  gsttcamsrc.h  gsttcamwhitebalance.c  gsttcamwhitebalance.cpp  gsttcamwhitebalance.h  image_sampling.c  image_sampling.h  image_transform_base.h  mainsrc_device_state.h  mainsrc_tcamprop_impl.cpp  mainsrc_tcamprop_impl.h  tcam_interface.h  tcambin_data.h  tcambin_tcamprop_impl.cpp  tcambin_tcamprop_impl.h  tcambinconversion.cpp  tcambinconversion.h  (+7 more)
tests/: CMakeLists.txt
tools/: CMakeLists.txt
(+1239 files in other folders)
